# fastapi-dairy

./: .env.example.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 5a3f1e1a329a_initial_table_migration.py
app/: config.py  main.py
app/db/: database.py
app/entries/: entries_model.py  entries_router.py  entry_schema.py
app/test/: conftest.py  test_entry.py  test_sub.py  test_user.py
app/users/: auth.py  test_user.py  user_model.py  user_router.py  user_schema.py
app/utils/: mail.py  oauth2.py
